@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0


hide circle
hide methods


class Agent {


}




 class House {
 hasBasement
 hasLoft
 sunExposure
 }

 class Inhabitable{
    bedroomNumber
    bathroomNumber
    parkingSpaces
    hasEquipment

 }



class BusinessType{
description
}


class PropertyType {
   description
}


class Announcement{
listedPrice
rentDuration
date


}

class Store{
 id
 designation
 address
 email
 phoneNumber


}





class Property{
    price
    area
    distanceToCentre

}

class Address{
    streetAddress
    state
    zipCode
}

class Employee{

}

class Commission{
value
typeCommission


}

class Person{
 email
 name
 passportNumber
 taxNumber
 phoneNumber


}

class Photograph{
uri

}

class Role{
id
description

}


Announcement "*" - "1" Agent : creates <

Announcement "1" -- "1" Commission: has a >

Announcement "1" -- "1" Property : refers to >


Employee "1" -- "1..*" Role: has  >

Property"*" -- "1" Store: listed under >


Employee --|> Person

Agent --|> Employee


Inhabitable  <|--  House

Property  <|--  Inhabitable


Announcement"*" -- "1"BusinessType: cataloged as >


Store "1" -- "1" Address: > has an

Employee "*" -- "1" Store: > works on a

Person "1" -- "1" Address  : > has a

Property "1" -- "1" Address  : > has an

Property "1" -- "1..30" Photograph: has  >

Property "*" -- "1" PropertyType: cataloged as >


Agent "1" - "*" Property : creates >




@enduml